--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="static/css/main.65027555.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="static/js/main.f3473292.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Placeholder</title>
+<link rel="shortcut icon" href="favicon.png"></head>
+<body>
+  <div id="root"></div>
+<script type="text/javascript" src="vendor.1d498e1698bf498e960f.js?e48b7ab2a3f4ced97975"></script><script type="text/javascript" src="app.a63d09562860eaaab619.js?e48b7ab2a3f4ced97975"></script></body>
+</html>
